# QaScribe

./: ARCHITECTURE.md
qascribe/: .gitignore  CLAUDE.md  README.md  docker-compose.yml
qascribe/.claude/: settings.local.json
qascribe/backend/: .env  .env.example  pyproject.toml
qascribe/backend/app/: main.py
qascribe/backend/app/api/: artifacts.py  config.py  schemas.py  sessions.py
qascribe/backend/app/core/: config.py  db.py
qascribe/backend/app/models/: spend.py
qascribe/backend/app/services/: cost_guard.py  gemini_service.py  storage.py  stt_service.py  synthesis_service.py  video_probe.py
qascribe/backend/app/skills/bug-report-template/: SKILL.md
qascribe/backend/app/skills/coverage-gap-analysis/: SKILL.md
qascribe/backend/app/skills/test-case-format/: SKILL.md
qascribe/backend/app/workers/: celery_app.py
qascribe/backend/tests/: test_artifact_review.py  test_artifacts_api.py  test_cost_guard.py  test_export.py
qascribe/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
qascribe/frontend/src/: App.tsx  index.css
qascribe/frontend/src/api/: client.ts
qascribe/frontend/src/components/: AppShell.tsx  BudgetBar.tsx  BugCard.tsx  EmptyState.tsx  ExportButton.tsx  ExportModal.tsx  Pagination.tsx  RecordingBar.tsx  ReviewStatusPill.tsx  StatusPill.tsx  Toast.tsx
qascribe/frontend/src/hooks/: useBrowserSupport.ts  useBugReviewMutation.ts  useDebouncedSearchParam.ts  useScreenRecorder.ts
qascribe/frontend/src/pages/: BugReportsPage.tsx  CoveragePage.tsx  DashboardPage.tsx  NewSessionPage.tsx  SessionDetailPage.tsx  (+4 more)
(+1 files in other folders)
